@@ -1,7 +1,0 @@
-//
-// Prefix header for all source files of the 'build all' target in the 'build all' project
-//
-
-#ifdef __OBJC__
-    #import <Foundation/Foundation.h>
-#endif
